# nm-laba

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
backend/algorithm/: CMakeLists.txt  accuracy_engine_simple.cpp  algorithm.cpp  algorithm.h  handler_onefile.py  test.cpp
